test/regress/coverage-wave2-annotate-err6.test
; Wave 2 coverage tests for annotate.cc error paths - unclosed tag paren
; Covers: unclosed tag parenthesis (line 190)

2024/01/01 Unclosed Tag
    Assets:Test              1 FOO (mytag
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Test              1 FOO (mytag
                           ^^^^^^^^^^^^
Error: Commodity tag lacks closing parenthesis
end test
